# carbonrs

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs  models.rs  processor.rs
src/cli/: args.rs
src/config/: mod.rs  settings.rs
src/font/: loader.rs  manager.rs  mod.rs
src/images/: builder.rs
src/syntax/: highlighter.rs  mod.rs  theme.rs
