[package]
name = "carbonrs"
version = "0.1.0"
authors = ["Cesar Daniel <cesardaniel.9611@gmail.com"]
description = "A Rust based cli for generating stunning images for you to share."
repository = "https://github.com/dantescur/carbonrs"
license = "MIT"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "cargo"] }
clap-verbosity-flag = "3.0.2"
dirs = "6.0.0"
env_logger = "0.11.7"
fontdb = "0.23.0"
image = "0.25.5"
imageproc = "0.25.0"
log = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
syntect = "5.2.0"
thiserror = "2.0.12"
toml = "0.8.20"
yazi-prebuild = { version = "0.1.2", features = ["build_deps"] }
