[package]
name = "carbonrs"
version = "0.1.0"
authors = ["Cesar Daniel <cesardaniel.9611@gmail.com"]
description = "A Rust based cli for generating stunning images for you to share."
repository = "https://github.com/dantescur/carbonrs"
license = "MIT"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "cargo"] }
dirs = "6.0.0"
image = "0.25.5"
imageproc = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
syntect = "5.2.0"
toml = "0.8.20"
yazi-prebuild = { version = "0.1.2", features = ["build_deps"] }
